Changes in 2.1.1:
 * Fix Fields in dataset plugins
 * Fix data import plugins
 * Use deprecated sipconfig if available to find SIP files
 * Fix problems with opening files using command line arguments with
   some encodings
 * Hide splash if program takes too long to start

Changes in 2.1:
 * If file cannot be imported on document load, ask user for a new filename
 * Only open HDF5 files in readonly mode
 * Do not simply log errors when loading data with ImportPlugins
 * Cleanup of stylesheet, setting and widget code
 * Fix filename chooser and embedding in ImageFile widget
 * Force C++11 compilation on Unix
 * Fix document reload, export warning and unsafe loading dialogs
 * Parameterize number of line steps in covariance widget
 * Report error line number for csv reading exceptions
 * Convert values from expressions to 1D arrays when required
 * Take account of endsize setting for bar plot error bars
 * Remove dependence on sipconfig in build and add sip build parameters

Changes in 2.0.1:
 * Fix crash setting manual bins in histogram dialog box
 * Add missing DLLs to Windows installer
 * Fix version number in Mac OS package
 * Add new colormaps (thanks to yingchaolu)

Changes in 2.0:
 * Update to PyQt5 and Qt5
 * Use Ghostscript to write EPS/PS formats
 * Use pyinstaller for MacOS builds instead of py2app
 * Windows build requires Windows 7 minimum
 * MacOS build requires MacOS 10.10 minimum
 * Move to using Sphinx for documentation
 * Add Makefile for documentation and remove build script
 * Use isfinite() on FreeBSD
 * Drop old veusz_listen script in favour of veusz --listen

Changes in 1.27:
 * New FITS import code and user interface, allowing much more
   flexible and convenient FITS importing
 * Fix half pixel error in linear WCS FITS support
 * Save custom definitions after importing data, to allow customs
   to depend on datasets.
 * Add preference for loading translation file
 * Fix logical errors in transparency in image widget