@@ -13,6 +13,7 @@ manipulation and editing of datasets. Data can be captured from
 external sources such as Internet sockets or other programs.
 
 Changes in 2.1.1:
+ * Fix dashed/dotted custom lines in EMF output
  * Fix Fields in dataset plugins
  * Fix data import plugins
  * Use deprecated sipconfig if available to find SIP files
